--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -63,7 +63,24 @@
     </nav>
 </header>
 <main class="container wrapper flex-grow-1">
-    {% bootstrap_messages %}
+    <!-- Блок для отображения сообщений -->
+    <div class="container mt-4">
+        {% if messages %}
+            <div class="row">
+                <div class="col">
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+    </div>
+
     {% block content %}{% endblock %}
 </main>
 <footer class="mt-auto">
