--- a/task_manager/templates/labels/labels.html
+++ b/task_manager/templates/labels/labels.html
@@ -4,14 +4,14 @@
 {% load i18n %}
 
 {% block title %}
-    {{ title }} | {% trans 'Task Manager' %}
+    {% trans 'Labels' %} | {% trans 'Task Manager' %}
 {% endblock %}
 
 {% block content %}
 <div class="container mt-5">
     <div class="card">
         <div class="card-body">
-            <h1 class="my-4">{{ title }}</h1>
+            <h1 class="my-4">{% trans 'Labels' %}</h1>
             <div class="mb-3">
                 <a class="btn btn-primary" href="{% url 'label_create' %}">{% trans 'Create label' %}</a>
             </div>
