--- a/task_manager/templates/statuses/delete.html
+++ b/task_manager/templates/statuses/delete.html
@@ -4,15 +4,15 @@
 {% load i18n %}
 
 {% block title %}
-    {{ title }} | {% trans 'Task Manager' %}
+    {% trans 'Delete status' %} | {% trans 'Task Manager' %}
 {% endblock %}
 
 {% block content %}
-    <h1 class="my-4">{{ title }}</h1>
+    <h1 class="my-4">{% trans 'Delete status' %}</h1>
 
     <form method="post">
         <p>{% trans 'Are you sure you want to delete' %} {{ status.name }}?</p>
         {% csrf_token %}
-        {% bootstrap_button button_text button_type="submit" button_class="btn btn-danger" %}
+        {% bootstrap_button _('Yes, delete') button_type="submit" button_class="btn btn-danger" %}
     </form>
 {% endblock %}
