--- a/task_manager/templates/users/delete.html
+++ b/task_manager/templates/users/delete.html
@@ -3,14 +3,14 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{{ page_title }} | {% trans 'Task Manager' %}{% endblock %}
+{% block title %}{% trans 'Delete user' %} | {% trans 'Task Manager' %}{% endblock %}
 
 {% block content %}
-    <h1 class="my-4">{{ title }}</h1>
+    <h1 class="my-4">{% trans 'Delete user' %}</h1>
 
     <form method="post">
         <p>{% trans 'Are you sure you want to delete' %} {{ user.first_name }} {{ user.last_name }}?</p>
         {% csrf_token %}
-        {% bootstrap_button button_text button_type="submit" button_class="btn btn-danger" %}
+        {% bootstrap_button _('Yes, delete') button_type="submit" button_class="btn btn-danger" %}
     </form>
 {% endblock %}
